[package]
name = "rsomics-de-volcano"
version = "0.1.0"
description = "Annotate differential expression results with significance categories for volcano plots"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
[[bin]]
name = "rsomics-de-volcano"
path = "src/main.rs"
[lib]
name = "rsomics_de_volcano"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
